css tablet view in 912px

--- a/about.html
+++ b/about.html
@@ -31,21 +31,29 @@
         </div>
         <div class="navbar-area">
             <div class="logo">
-                <img src="../assets/image/logo.jpg" alt="logo" />
+                <img src="./assets/image/logo.jpg" alt="logo" />
             </div>
-            <ul class="nav-link">
-                <li><a href="/index.html">Home</a></li>
+            <ul class="nav-link responsive-nav">
+                <li><a href="./index.html">Home</a></li>
+                <hr>
                 <li><a href="./about.html">About</a></li>
+                <hr>
                 <li><a href="./shop.html">Shop</a></li>
+                <hr>
                 <li><a href="./orders.html">Order</a></li>
-                <li><a href="./login.html">Login</a></li>
-                <li><a href="/assets/">Contact</a></li>
+                <hr>
+                <li><a href="./Login.html">Login</a></li>
+                <hr>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
+            <span class="menu-bars"><i class="fas fa-bars"></i></span>
+            <span class="close"><i class="fa-solid fa-x"></i></span>
             <div class="cart-area">
                 <p><i class="fa-solid fa-bag-shopping"></i> $0.00</p>
             </div>
 
         </div>
+
     </nav>
     <section>
         <div class="about-area">
@@ -140,11 +148,11 @@
                         </div>
                     </div>
 
-                </section>
+
             </div>
 
         </div>
-
+        </section>
     </section>
     <div id="toTop" class="to-top">
         <a href="#top">&#8963;</a>
