--- a/contact.html
+++ b/contact.html
@@ -31,16 +31,23 @@
         </div>
         <div class="navbar-area">
             <div class="logo">
-                <img src="../assets/image/logo.jpg" alt="logo" />
+                <img src="./assets/image/logo.jpg" alt="logo" />
             </div>
-            <ul class="nav-link">
-                <li><a href="/index.html">Home</a></li>
+            <ul class="nav-link responsive-nav">
+                <li><a href="./index.html">Home</a></li>
+                <hr>
                 <li><a href="./about.html">About</a></li>
+                <hr>
                 <li><a href="./shop.html">Shop</a></li>
+                <hr>
                 <li><a href="./orders.html">Order</a></li>
+                <hr>
                 <li><a href="./Login.html">Login</a></li>
+                <hr>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
+            <span class="menu-bars"><i class="fas fa-bars"></i></span>
+            <span class="close"><i class="fa-solid fa-x"></i></span>
             <div class="cart-area">
                 <p><i class="fa-solid fa-bag-shopping"></i> $0.00</p>
             </div>
