--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <div class="cat-btn-info"><i class="fa-solid fa-paper-plane"></i>
                     <h3>SHOP BY CATEGORIES</h3>
                     <i onclick="myFunction()" class="fa-solid fa-chevron-down"></i></div>
+                <!--<i class="fa-solid fa-chevron-up"></i>-->
                 <input id="category-tag" placeholder="SHOP BY CATEGORIES" type="button" name="category">
 
             </div>
