--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav>
-        <div class="nav-top">
+        <div id="top" class="nav-top">
             <ul class="nav-list">
                 <li><a href="#"> Cart</a></li>
                 <li><a href="#">Checkout</a></li>
@@ -29,18 +29,25 @@
                 <P><i class="fa-solid fa-envelope"></i>admin@yourhealthychoicellc.com</P>
             </div>
         </div>
-        <div id="top" class="navbar-area">
+        <div class="navbar-area">
             <div class="logo">
-                <img src="../assets/image/logo.jpg" alt="logo" />
+                <img src="./assets/image/logo.jpg" alt="logo" />
             </div>
-            <ul class="nav-link">
-                <li><a href="/index.html">Home</a></li>
+            <ul class="nav-link responsive-nav">
+                <li><a href="./index.html">Home</a></li>
+                <hr>
                 <li><a href="./about.html">About</a></li>
+                <hr>
                 <li><a href="./shop.html">Shop</a></li>
+                <hr>
                 <li><a href="./orders.html">Order</a></li>
+                <hr>
                 <li><a href="./Login.html">Login</a></li>
+                <hr>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
+            <span class="menu-bars"><i class="fas fa-bars"></i></span>
+            <span class="close"><i class="fa-solid fa-x"></i></span>
             <div class="cart-area">
                 <p><i class="fa-solid fa-bag-shopping"></i> $0.00</p>
             </div>
