responsive css dropdown javascrip

--- a/about.html
+++ b/about.html
@@ -95,12 +95,12 @@
                 </div>
                 <section>
                     <div>
-                        <div class="about-search">
+                        <div class="about-search about-sh-bar">
                             <input class="abt-search" type="text" name="search" placeholder="search...." />
                             <span><button>SEARCH</button></span>
                         </div>
                     </div>
-                    <div class="about-adds">
+                    <div class="about-adds about-2">
                         <div class="about-add-info">
                             <img src="../assets/image/product1.jpg" alt="product img" />
                             <h4>MILK THISTLE</h4>
