code to javascript

--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
             </div>
 
 
-            <div class="screach">
+            <div class="screach input-area">
+
                 <input class="setext" type="text" name="search" placeholder="search..." />
                 <input class="scat" type="text" name="search" placeholder="-category-" />
+
                 <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span>
             </div>
         </div>
