--- a/orders.html
+++ b/orders.html
@@ -62,22 +62,23 @@
                     <h4>Login</h4>
                 </div>
                 <div class="login-chart">
-                    <div class="login-form">
+                    <form class="login-form">
                         <label for="uname" required><p>Username or email address<span>	&#42;</span></p></label><br>
                         <input id="username" type="text" name="uname" required><br>
 
-                        <label for="psw"><p>Password<span>&#42;</span></p></label><br>
-                        <input id="password" type="password" name="psw" placeholder="&#9673;" required><br>
+                        <label for="psw"><p>Password<span></span></p></label><br>
+                        <input id="password" type="password" name="psw" placeholder="" required>
+                        <i onclick="myFunction()" id="togglePassword" class=" fa fa-eye togglePassword" aria-hidden="true "></i><br>
 
-                        <div class="check-area">
-                            <input type="checkbox" id="checkbox" name="checkbox" value="1">
-                            <label for="checkbox">Remember me</label><br>
+                        <div class="check-area ">
+                            <input type="checkbox" id="checkbox " name="checkbox ">
+                            <label for="checkbox ">Remember me</label><br>
                         </div>
 
-                        <button id="btn" type="submit">Login in</button><br>
+                        <button id="btn " type="submit ">Login in</button><br>
 
-                        <a href="#">Lost your password?</a>
-                    </div>
+                        <a href="# ">Lost your password?</a>
+                    </form>
                 </div>
             </div>
             <section>
