--- a/login.html
+++ b/login.html
@@ -62,76 +62,78 @@
                     <h4>Login</h4>
                 </div>
                 <div class="login-chart">
-                    <div class="login-form">
+                    <form class="login-form">
                         <label for="uname" required><p>Username or email address<span>	&#42;</span></p></label><br>
                         <input id="username" type="text" name="uname" required><br>
 
-                        <label for="psw"><p>Password<span>&#42;</span></p></label><br>
-                        <input id="password" type="password" name="psw" placeholder="&#9673;" required><br>
+                        <label for="psw"><p>Password<span></span></p></label><br>
+                        <input id="password" type="password" name="psw" placeholder="" required>
+                        <i onclick="myFunction()" id="togglePassword" class=" fa fa-eye togglePassword" aria-hidden="true "></i>
+                        <!--<i class="fa fa-eye-slash " aria-hidden="true "></i>--><br>
 
-                        <div class="check-area">
-                            <input type="checkbox" id="checkbox" name="checkbox" value="1">
-                            <label for="checkbox">Remember me</label><br>
+                        <div class="check-area ">
+                            <input type="checkbox" id="checkbox " name="checkbox ">
+                            <label for="checkbox ">Remember me</label><br>
                         </div>
 
-                        <button id="btn" type="submit">Login in</button><br>
+                        <button id="btn " type="submit ">Login in</button><br>
 
-                        <a href="#">Lost your password?</a>
-                    </div>
+                        <a href="# ">Lost your password?</a>
+                    </form>
                 </div>
             </div>
             <section>
-                <div class="order-sidebar">
+                <div class="order-sidebar ">
 
                     <div>
-                        <div class="about-search">
-                            <input class="abt-search" type="text" name="search" placeholder="search...." />
+                        <div class="about-search ">
+                            <input class="abt-search " type="text " name="search " placeholder="search.... " />
                             <span><button>SEARCH</button></span>
                         </div>
                     </div>
-                    <div class="about-adds">
-                        <div class="about-add-info">
-                            <img src="../assets/image/product1.jpg" alt="product img" />
+                    <div class="about-adds ">
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product1.jpg " alt="product img " />
                             <h4>MILK THISTLE</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product juice6.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product juice6.jpg " alt="product img " />
                             <h4>MIRACLE REDS</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product juice1.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product juice1.jpg " alt="product img " />
                             <h4>BIO STEEL SPORTS DRINK</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product juice2.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product juice2.jpg " alt="product img " />
                             <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product juice3.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product juice3.jpg " alt="product img " />
                             <h4>BIO STEEL RAINBOW SPORTS DRINK</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/thumbnail-4.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/thumbnail-4.jpg " alt="product img " />
                             <h4>THE COMPLETE CRUNCHY COOKIES</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product2.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product2.jpg " alt="product img " />
                             <h4>Plant-Based Protein</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product juice4.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product juice4.jpg " alt="product img " />
                             <h4>AQUAHYDRATE 4X1 GALLON</h4>
                             <button>Read More</button>
                         </div>
-                        <div class="about-add-info">
-                            <img src="../assets/image/product3.jpg" alt="product img" />
+                        <div class="about-add-info ">
+                            <img src="../assets/image/product3.jpg " alt="product img " />
                             <h4>NATURES PLANT PROTEIN</h4>
                             <button>Read More</button>
                         </div>
@@ -141,42 +143,42 @@
                 </div>
             </section>
     </section>
-    <div id="toTop" class="to-top">
-        <a href="#top">&#8963;</a>
+    <div id="toTop " class="to-top ">
+        <a href="#top ">&#8963;</a>
     </div>
     <!--footer area-->
     <footer>
-        <div class="foot-area">
-            <div class="foot-info-1">
+        <div class="foot-area ">
+            <div class="foot-info-1 ">
                 <h3>Your Healthy Choice Vending LLC</h3>
-                <img src="../assets/image/logo.jpg" />
+                <img src="../assets/image/logo.jpg " />
                 <div><button>Shop Online</button></div>
             </div>
-            <div class="foot-info-2">
+            <div class="foot-info-2 ">
                 <h3>Follow Us</h3>
-                <span class="icons"><i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-solid fa-phone-flip"></i>
+                <span class="icons "><i class="fa-brands fa-facebook "></i>
+                    <i class="fa-brands fa-twitter "></i>
+                    <i class="fa-brands fa-instagram "></i>
+                    <i class="fa-brands fa-whatsapp "></i>
+                    <i class="fa-brands fa-youtube "></i>
+                    <i class="fa-solid fa-phone-flip "></i>
                 </span>
 
                 <p>Follow Us Owned and operated by US Veteran</p>
 
             </div>
-            <div class="foot-info-3">
+            <div class="foot-info-3 ">
                 <h3>Our Vision</h3>
                 <p>With our highly efficient, flexible, and fast snack delivery and vending services, Your Healthy Choice Vending aims to offer high standard food products that are accessible to anyone. We offer a healthy lifestyle in this busy world through
                     nutritious food and healthy drinks.</p>
             </div>
         </div>
         <hr>
-        <div class="foot-bottom">
+        <div class="foot-bottom ">
             <p>Copyright © All rights reserved. | Your Healthy Choice Vending LLC</p>
         </div>
     </footer>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js "></script>
 </body>
 
 </html>
