responsive css for 499px

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         </div>
 
     </nav>
-    <section>
+    <section class="about-section">
         <div class="about-area">
             <h2 class="about-head">About us</h2>
             <div class="about">
