--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
             <div class="screach input-area">
 
-                <input class="setext" type="text" name="search" placeholder="search..." />
-                <input class="scat" type="text" name="search" placeholder="-category-" />
-                <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span>
+                <input class="se-text" type="text" name="search" placeholder="search..." />
+                <div class="category-area"><input class="scat" type="text" name="search" placeholder="-category-" />
+                    <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span></div>
             </div>
 
         </div>
