responsive css added to all pages

--- a/index.html
+++ b/index.html
@@ -55,24 +55,24 @@
 
         </div>
         <div class="search-area">
+            <div class="search-main">
+                <div class="dropdown">
+                    <div class="cat-btn-info"><i class="fa-solid fa-paper-plane"></i>
+                        <h3>SHOP BY CATEGORIES</h3>
+                        <i class="fa-solid fa-chevron-down btn-icon"></i></div>
+                    <!--<i class="fa-solid fa-chevron-up"></i>-->
+                    <input id="category-tag" placeholder="SHOP BY CATEGORIES" type="button" name="category">
 
-            <div class="dropdown">
-                <div class="cat-btn-info"><i class="fa-solid fa-paper-plane"></i>
-                    <h3>SHOP BY CATEGORIES</h3>
-                    <i class="fa-solid fa-chevron-down btn-icon"></i></div>
-                <!--<i class="fa-solid fa-chevron-up"></i>-->
-                <input id="category-tag" placeholder="SHOP BY CATEGORIES" type="button" name="category">
+                </div>
 
+
+                <div class="screach input-area">
+
+                    <input class="se-text" type="text" name="search" placeholder="search..." />
+                    <div class="category-area"><input class="scat" type="text" name="search" placeholder="-category-" />
+                        <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span></div>
+                </div>
             </div>
-
-
-            <div class="screach input-area">
-
-                <input class="se-text" type="text" name="search" placeholder="search..." />
-                <div class="category-area"><input class="scat" type="text" name="search" placeholder="-category-" />
-                    <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span></div>
-            </div>
-
         </div>
     </nav>
     <!--dropdown category-->
